--- a/ihc-conference-room/IHCVirtualConferenceRoom.html
+++ b/ihc-conference-room/IHCVirtualConferenceRoom.html
@@ -9,18 +9,18 @@
 
 <!--<style>
  body {background-color: whitesmoke;
- }
-h1   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-h2   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-h3   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-h4   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
+ <h1 style="white-space:pre-wrap; margin-left: 40px; border: 2px solid black; max-width: 570px">INTEGRATED HUMANITIES CENTER</h1>
+  <div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
+        <li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
+        <li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
+        <li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a></li>
+      </ul>
+    </nav>
+  </div>ily: Helvetica,arial,sans-serif; font-weight: lighter;
 }
 p    {
 color: black;
