--- a/IHC-TOOLS2-main/ihctools3.html
+++ b/IHC-TOOLS2-main/ihctools3.html
@@ -1,4 +1,3 @@
-<! -- this page will be a sub webpage in the IHC Tools index page. 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,7 @@
  <meta name="viewport"
  content="width=device-width, initial-scale=1.0">
  <title>IHC Tools</title>
-<style>
+<!--<style>
 
  body {background-color: whitesmoke;
   }
@@ -63,14 +62,24 @@ font-family: Helvetica,arial,sans-serif;
    
     float: right;
 }
-</style>
+</style>-->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
-	<div>
-      			<h1 style="white-space:pre-wrap;">INTEGRATED HUMANITIES CENTER </h1>
-      			<p style="text-align:right;white-space:pre-wrap;" class=""><a href="https://www.suzannedelgizzo.net/integratedhumanities">Integrated Humanities</a>   <a href="https://www.suzannedelgizzo.net/ihc-teaching-learning/">IHC Teaching &amp; Learning</a>   <a href="pedagogy.html">IHC Pedagogy</a>   <a href="ihctools.html">IHC Tools</a>   <a href="https://www.suzannedelgizzo.net/ihc-conference-room"> IHC Virtual Conference Room</a></p>
-      				</div>
+<div>
+	<h1 style="white-space:pre-wrap; margin-left: 40px; border: 2px solid black; max-width: 570px">INTEGRATED HUMANITIES CENTER</h1>
+      	<nav>
+      		<ul>
+        		<li><a href="index.html">Home</a></li>
+        		<li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
+        		<li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
+        		<li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
+        		<li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a>
+				</li>
+      		</ul>
+    	</nav>
+</div>
 
       				<main>
 
