--- a/IHC-TOOLS2-main/ihctools.html
+++ b/IHC-TOOLS2-main/ihctools.html
@@ -67,11 +67,11 @@ p    {
   <main>
     <div class="center">
       <h2 style="white-space:pre-wrap;"><a href="https://www.suzannedelgizzo.net/#/ihc-teaching-learning/">TEACHING &amp; LEARNING RESOURCES</a> -  TOOLS</h2>
-      <img src="assets/pedagogy_classroom.jpg" alt="A classroom." width="400" height="250" class="img_float_right"/>
+      <img src="../assets/pedagogy_classroom.jpg" alt="A classroom." width="400" height="250" class="img_float_right"/>
       <p class="" style="white-space:pre-wrap;"><strong>The foundational tools will be:</strong></p>
       <p>
-      <ul>
-        <li>our Learning Management System (LMS) is Canvas</li>
+      <ul style="list-style-type: none">
+        <li>Our Learning Management System (LMS) is Canvas</li>
         <li>MS TEAMS and Canvas BBB, which are the videoconferencing platforms supported by CHC</li>
       </ul>
       </p>
