--- a/IHC-TOOLS2-main/ihctools1.html
+++ b/IHC-TOOLS2-main/ihctools1.html
@@ -6,7 +6,7 @@
  <meta name="viewport"
  content="width=device-width, initial-scale=1.0">
  <title>IHC Tools</title>
-<style> 
+<!--<style> 
   
  body {background-color: whitesmoke;
   }
@@ -63,46 +63,71 @@ font-family: Helvetica,arial,sans-serif;
    
     float: right;
 }
-</style>
+</style>-->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div>
-      			<h1 style="white-space:pre-wrap;">INTEGRATED HUMANITIES CENTER </h1>
-      			<p style="text-align:right;white-space:pre-wrap;" class=""><a href="https://www.suzannedelgizzo.net/integratedhumanities">Integrated Humanities</a>   <a href="https://www.suzannedelgizzo.net/ihc-teaching-learning/">IHC Teaching &amp; Learning</a>   <a href="pedagogy.html">IHC Pedagogy</a>   <a href="ihctools.html">IHC Tools</a>   <a href="https://www.suzannedelgizzo.net/ihc-conference-room"> IHC Virtual Conference Room</a></p>
-      				</div>
+      	<h1 style="white-space:pre-wrap; margin-left: 40px; border: 2px solid black; max-width: 570px">INTEGRATED HUMANITIES CENTER</h1>
+      	<nav>
+      		<ul>
+        		<li><a href="index.html">Home</a></li>
+        		<li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
+        		<li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
+        		<li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
+        		<li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a>
+				</li>
+      		</ul>
+    	</nav>
+    </div>
 
-      				<main>
-<div class="center">
-<h2 style="white-space:pre-wrap;">CANVAS </h2>
-<p class="" style="white-space:pre-wrap;"> Canvas offers faculty and instructors a convenient place to present class materials and activities— documents, assignments, resources, rubrics, grades.  It also has sophisticated meeting, conferencing, group work, peer review, and many other functions.  I have created or curated an archive of videos that will demonstrate the most popular or needed features in Canvas. </p>
+<main>
+	<div class="center">
+		<h2 style="white-space:pre-wrap;"><strong>CANVAS</strong></h2>
+		<p class="" style="white-space:pre-wrap;"> Canvas offers faculty and instructors a convenient place to present class materials and activities— documents, assignments, resources, rubrics, grades.  It also has sophisticated meeting, conferencing, group work, peer review, and many other functions.  I have created or curated an archive of videos that will demonstrate the most popular or needed features in Canvas. </p>
     
-<p class="" style="white-space:pre-wrap;">At a minimum, given possible disruption during the Fall 2020 semester, consider using Canvas for the following essential functions: </p><p class="" style="white-space:pre-wrap;"><ul>
-    <li>Communicating with Students, especially via Announcements and Canvas Inbox     </li>
-     <li> Taking attendance </li>
-     <li>  Posting the course syllabus    </li>
-     <li>   Posting assignments   </li>
-     <li>  Posting grades    </li>
-    </ul></p><p class="" style="white-space:pre-wrap;">Other cool features on Canvas you might eventually want to try: </p><p class="" data-rte-preserve-empty="true">
-                        <ul>
-    <li>Discussion Board      </li>
-     <li> Conferences  </li>
-     <li>  Peer Review     </li>
-     <li>  Integrated Rubrics    </li>
-     <li>  Quizzes   </li>
-     <li>Collaborations     </li>
-    <li>Making and/or posting videos in Studio      </li>
-    </ul>    
-                        </p>
-    <p class="" style="white-space:pre-wrap;"><strong>To access training videos (long and short formats), visit, the</strong><a href="https://www.suzannedelgizzo.net/ihc-conference-room"><strong><u> IHC Virtual Conference Room </u></strong></a> for links.</p>
+		<p class="" style="white-space:pre-wrap;"><strong>At a minimum, given possible disruption during the Fall 2020 semester, consider using Canvas for the following essential functions: </strong></p><p class="" style="white-space:pre-wrap;"><ul>
+    	<li>Communicating with Students, especially via Announcements and Canvas Inbox</li>
+		<br>
+     	<li>Taking attendance</li>
+		<br>
+     	<li>Posting the course syllabus</li>
+		<br>
+     	<li>Posting assignments</li>
+		<br>
+     	<li>Posting grades</li>
+		<br>
+    	</ul></p>
+		<p class="" style="white-space:pre-wrap;"><strong>Other cool features on Canvas you might eventually want to try: </strong></p>
+		<p class="" data-rte-preserve-empty="true">
+        <ul>
+    		<li>Discussion Board</li>
+			<br>
+     		<li>Conferences</li>
+			<br>
+     		<li>Peer Review</li>
+			<br>
+     		<li>Integrated Rubrics</li>
+			<br>
+     		<li>Quizzes</li>
+			<br>
+     		<li>Collaborations</li>
+			<br>
+    		<li>Making and/or posting videos in Studio</li>
+    	</ul>    
+        </p>
+    	
+		<p class="" style="white-space:pre-wrap;"><strong>To access training videos (long and short formats), visit, the</strong><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html"><strong><u> IHC Virtual Conference Room </u></strong></a> for links.</p>
 
-<form class="btn1" action="ihctools.html">
+
+
+</div>
+	<form class="btn1" action="ihctools.html">
     <input type="submit" value="Previous" />
 </form>
 <form class="btn2" action="ihctools2.html">
     <input type="submit" value="Next" />
 </form>
-
-</div>
 </main>
 
 </body>
