--- a/ihc-conference-room/IHCVirtualConferenceRoom.html
+++ b/ihc-conference-room/IHCVirtualConferenceRoom.html
@@ -59,7 +59,7 @@ font-family: Helvetica,arial,sans-serif;
   <main>
   <div class="center">
   <h2 style="white-space:pre-wrap;">VIRTUAL CONFERENCE ROOM</h2>
-  <strong><img src="images/Conference+room.jpg" alt="" width="300" height="226" class="img_float_right"/></strong>
+  <strong><img src="../assets/Virtual+Conference+Room+Centered.jpg" alt="Conference Room" width="300" height="226" class="img_float_right"/></strong>
   <p class="" style="white-space:pre-wrap;"><strong> This is the CHC Integrated Humanities virtual conference room. It is a curated online space where we can present our trainings &amp; conversations and other shared Center-specific facutly development resources in an attractive, user-friendly format.</strong></p>
   <p class="" style="white-space:pre-wrap;"><strong> What will you find here? </strong></p>
   <ul>
@@ -75,29 +75,29 @@ font-family: Helvetica,arial,sans-serif;
     <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Best Practices for Connected Remote Teaching &amp;  Learning— Transform, don’t just transfer your courses! Suzanne del Gizzo. Recorded on July 15, 2020.</a></p>
   </li>
   <li>
-    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Designing Meaningful Asynchronous Activities. Suzanne del Gizzo.  Recorded on August 3, 2020.</a></p>
+    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=LYpJHJPomqg&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=2">Designing Meaningful Asynchronous Activities. Suzanne del Gizzo.  Recorded on August 3, 2020.</a></p>
   </li>
   <li>
-    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Ungrading and Alternative to Grading.  Keely McCarthy and Suzanne del Gizzo.  Recorded on August 5, 2020.</a></p>
+    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=2EmT_xkkdGs&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=3">Ungrading and Alternative to Grading.  Keely McCarthy and Suzanne del Gizzo.  Recorded on August 5, 2020.</a></p>
   </li>
   <li>
-    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Equity and Universal Design for Learning.  Keely McCarthy.  Recorded on August 12, 2020.</a></p>
+    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=TVM92mShj2g&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=4">Equity and Universal Design for Learning.  Keely McCarthy.  Recorded on August 12, 2020.</a></p>
   </li>
   <li>
-    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Poll Everywhere for Driving Student Engagement.  Suzanne del Gizzo.  Recorded August 26, 2020</a></p>
+    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=TJ4ujSA75kM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=5">Poll Everywhere for Driving Student Engagement.  Suzanne del Gizzo.  Recorded August 26, 2020</a></p>
   </li>
   <li>
     <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">An Overview of How to Use Kahoot and  Kahoot - how to use with students. Keely McCarthy.  Recorded September 11, 2020.</a></p>
   </li>
   <li>
-    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Low Tech Ways to Engage Students on Zoom.  Suzanne del Gizzo.  Recorded September 15, 2020.</a></p>
+    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=6_kiTqOJgwg&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=6">Low Tech Ways to Engage Students on Zoom.  Suzanne del Gizzo.  Recorded September 15, 2020.</a></p>
   </li>
   <li>
     <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Scategories to break the Zoom Fog.  Keely McCarthy.  Recorded on October 7, 2020.</a></p>
   </li>
   <strong class="">Canvas Trainings:</strong>
   <li>
-    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Migrating Course Materials from One Canvas Shell to Another.  Suzanne del Gizzo.  Recorded on December 14, 2020.</a></p>
+    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=wUn0VI_QNuU&list=PLdBsCJVVY0jxy4AngQ-c7qcodD3NIiBGV&index=6">Migrating Course Materials from One Canvas Shell to Another.  Suzanne del Gizzo.  Recorded on December 14, 2020.</a></p>
   </li>
   <li>
     <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=0UY6odYt2rQ&list=PLdBsCJVVY0jxy4AngQ-c7qcodD3NIiBGV&index=1">Canvas Training part 1- An Overview.  Recorded on July 6, 2020.</a></p>
@@ -106,7 +106,7 @@ font-family: Helvetica,arial,sans-serif;
     <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=Lb-_SOo92D4&list=PLdBsCJVVY0jxy4AngQ-c7qcodD3NIiBGV&index=2">Canvas Training part 2- Modules and Assignment & Grade book. Recorded on July 8, 2020.</a></p>
   </li>
   <li>
-    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Canvas Training part 3- Group Work (Collaborations, Discussion Board, Peer Review).  Recorded on July 13, 2020. </a></p>
+    <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=5RRcuY-QtOY&list=PLdBsCJVVY0jxy4AngQ-c7qcodD3NIiBGV&index=3">Canvas Training part 3- Group Work (Collaborations, Discussion Board, Peer Review).  Recorded on July 13, 2020. </a></p>
   </li>
   <li>
     <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=GP5QjHtkAvk&list=PLdBsCJVVY0jxy4AngQ-c7qcodD3NIiBGV&index=9">Canvas Training- Using Studio and Adding Videos on Canvas (with a Video Quiz too).  Recorded on August 19, 2020.</a></p>
