--- a/LandingPage-v2-main/index.html
+++ b/LandingPage-v2-main/index.html
@@ -34,12 +34,18 @@
 
 <div class="center" style="margin-top: 10px; margin-bottom: 10px; margin-left: auto; margin-right: auto; font-size: 18pt; text-align: center; display: block;">
 	The Center for Integrated Humanities at Chestnut Hill College is a hub for innovative and collaborative teaching and learning in English, Foreign Language & Literature, History, Media & Communication, Music & Arts, and Religious Studies & Philosophy.
+	
+	
+	<img src="../assets/webinar-banner.jpg" alt="Humanities from the Hill" class="humanities" style="display: block; margin-left: auto; margin-right: auto; margin-top: 40px;">
+	
+	
+	<div class="square">
+	<img src="../assets/chcemblem.png" alt="Chestnut Hill College" style="display: block; margin-top: 30px; margin-left: auto; margin-right: auto;">
+	</div>
 </div>
 
 
-<img src="../assets/webinar-banner.jpg" alt="Humanities from the Hill" style="display: block; margin-left: auto; margin-right: auto; margin-top: 40px;">
 
-<img src="../assets/chcemblem.png" alt="Chestnut Hill College" style="display: block; margin-top: 30px; margin-left: auto; margin-right: auto;">
 
 
 </div>
