--- a/ihcpedagogy/pedagogy.html
+++ b/ihcpedagogy/pedagogy.html
@@ -1,4 +1,3 @@
-<! -- this is the IHC Pedagogy index page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,7 @@
  content="width=device-width, initial-scale=1.0">
  <title>IHC Remote Pedagogy</title>
 
-<style>
+<!--<style>
  body {background-color: whitesmoke;
  }
 
@@ -48,17 +47,23 @@ p    {
     border: thin solid #312E2E;
     float: right;
 
-</style>
+</style>-->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div id="wrapper">
-
-  
-
-<div>
-      			<h1 style="white-space:pre-wrap;">INTEGRATED HUMANITIES CENTER</h1>
-      			<p style="text-align:right;white-space:pre-wrap;" class=""><a href="https://www.suzannedelgizzo.net/integratedhumanities">Integrated Humanities</a>   <a href="https://www.suzannedelgizzo.net/ihc-teaching-learning/">IHC Teaching &amp; Learning</a>   <a href="pedagogy.html">IHC Pedagogy</a>   <a href="https://www.suzannedelgizzo.net/ihc-tools">IHC Tools</a>   <a href="https://www.suzannedelgizzo.net/ihc-conference-room"> IHC Virtual Conference Room</a></p>
-      				</div>
+<div id="wrapper" style="margin-bottom: 5px; column-gap: normal;">
+  <h1 style="white-space:pre-wrap; margin-left: 40px; border: 2px solid black; max-width: 570px">INTEGRATED HUMANITIES CENTER</h1>
+  <div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
+        <li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
+        <li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
+        <li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a></li>
+      </ul>
+    </nav>
+  </div>
  
      
      <main>
