--- a/IHC-TOOLS2-main/ihctools.html
+++ b/IHC-TOOLS2-main/ihctools.html
@@ -5,54 +5,13 @@
 <meta name="viewport"
  content="width=device-width, initial-scale=1.0">
 <title>IHC Tools</title>
-<!--
-<style>
- body {background-color: whitesmoke;
- }
-
-h1   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-h2   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-h3   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-h4   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-p    {
-	color: black;
-	font-family: Helvetica,arial,sans-serif;
-    
-}
-
-.center {
-  margin: auto;
-  width: 70%;
-  border: 2px solid black;
-  padding: 10px;
-}
-
-.img_float_right {
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border: thin solid #312E2E;
-    float: right;
-
-</style>-->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 <link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="wrapper" style="margin-bottom: 5px; column-gap: normal;">
-  <h1 style="white-space:pre-wrap; margin-left: 40px; border: 2px solid black; max-width: 570px">INTEGRATED HUMANITIES CENTER</h1>
+  <h1 class="landingtitle">INTEGRATED HUMANITIES CENTER</h1>
   <div>
     <nav>
       <ul>
@@ -66,7 +25,7 @@ p    {
   </div>
   <main>
     <div class="center">
-      <h2 style="white-space:pre-wrap;"><a href="https://www.suzannedelgizzo.net/#/ihc-teaching-learning/">TEACHING &amp; LEARNING RESOURCES</a> -  TOOLS</h2>
+      <h2 style="white-space:pre-wrap;"><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">TEACHING &amp; LEARNING RESOURCES</a> -  TOOLS</h2>
       <img src="../assets/pedagogy_classroom.jpg" alt="A classroom." width="400" height="250" class="img_float_right"/>
       <p class="" style="white-space:pre-wrap;"><strong>The foundational tools will be:</strong></p>
       <p>
