--- a/IHC-TOOLS2-main/ihctools4.html
+++ b/IHC-TOOLS2-main/ihctools4.html
@@ -5,70 +5,14 @@
  <meta name="viewport"
  content="width=device-width, initial-scale=1.0">
  <title>IHC Tools</title>
-<!--<style> 
-
-body {background-color: whitesmoke;
-  }
-
-h1  {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-h2   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-h3   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-h4   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-
-p {color: black;
-font-family: Helvetica,arial,sans-serif;
- }
-   
-.center {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-}
-
-.img_float_right {
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border: thin solid #312E2E;
-    float: right;}
-
-.btn1{
-     margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    
-    float: left;
-}
-
-.btn2{
-     margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-   
-    float: right;
-}
-</style>-->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 <link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
 <div>
-	<h1 style="white-space:pre-wrap; margin-left: 40px; border: 2px solid black; max-width: 570px">INTEGRATED HUMANITIES CENTER</h1>
+	<h1 class="landingtitle">INTEGRATED HUMANITIES CENTER</h1>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
