--- a/LandingPage-v2-main/index.html
+++ b/LandingPage-v2-main/index.html
@@ -5,20 +5,16 @@
  <meta name="viewport"
  content="width=device-width, initial-scale=1.0">
  <title>INTEGRATED HUMANITIES CENTER</title>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 <link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="wrapper">
 
   
-
 <div>
-	<h1 style="white-space:pre-wrap; margin-left: 40px; border: 2px solid black; max-width: 570px">INTEGRATED HUMANITIES CENTER</h1>
-      			
-	
-	<!--<p style="text-align: center; white-space: pre-wrap; margin-left: auto;margin-right: auto; display: block;" 
-                class="">
-                <a href="https://www.suzannedelgizzo.net/integratedhumanities">Integrated Humanities</a>   <a href="https://www.suzannedelgizzo.net/ihc-teaching-learning/">IHC Teaching &amp; Learning</a>   <a href="pedagogy.html">IHC Pedagogy</a>   <a href="https://www.suzannedelgizzo.net/ihc-tools">IHC Tools</a>   <a href="https://www.suzannedelgizzo.net/ihc-conference-room"> IHC Virtual Conference Room</a></p>-->
+	<h1 class="landingtitle">INTEGRATED HUMANITIES CENTER</h1>
 	
 	<nav>
     <ul>
