--- a/ihc-conference-room/IHCVirtualConferenceRoom.html
+++ b/ihc-conference-room/IHCVirtualConferenceRoom.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 <link href="../styles.css" rel="stylesheet" type="text/css">
 <head>
 <meta charset="utf-8" />
@@ -7,45 +9,11 @@
  content="width=device-width, initial-scale=1.0">
 <title>IHC Tools</title>
 
-<!--<style>
- body {background-color: whitesmoke;
- <h1 style="white-space:pre-wrap; margin-left: 40px; border: 2px solid black; max-width: 570px">INTEGRATED HUMANITIES CENTER</h1>
-  <div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
-        <li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
-        <li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
-        <li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a></li>
-      </ul>
-    </nav>
-  </div>ily: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-p    {
-color: black;
-font-family: Helvetica,arial,sans-serif;
-   
-}
-.center {
-  margin: auto;
-  width: 70%;
-  border: 2px solid black;
-  padding: 10px;
-}
-.img_float_right {
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border: thin solid #312E2E;
-    float: right;
-</style>-->
 </head>
 <body>
 <div id="wrapper">
   <div>
-    <h1 style="white-space:pre-wrap; margin-left: 40px; border: 2px solid black; max-width: 570px">INTEGRATED HUMANITIES CENTER</h1>
+    <h1 class="landingtitle">INTEGRATED HUMANITIES CENTER</h1>
     <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
