--- a/ihcpedagogy/subpage5.html
+++ b/ihcpedagogy/subpage5.html
@@ -1,102 +1,56 @@
-<! -- this page will be a sub webpage in the IHC Pedagogy index page. All content under "TIMELY FEEDBACK & GRADE TRANSPARENCY" will be pasted here. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="utf-8" />
- <meta name="viewport"
+<meta charset="utf-8" />
+<meta name="viewport"
  content="width=device-width, initial-scale=1.0">
- <title>IHC Remote Pedagogy</title>
-<style> 
-
-body {background-color: whitesmoke;
-  }
-
-h1  {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-h2   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-h3   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-h4   {color: black;
-font-family: Helvetica,arial,sans-serif; font-weight: lighter;
-}
-
-
-p {color: black;
-font-family: Helvetica,arial,sans-serif;
- }
-   
-.center {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-}
-
-.img_float_right {
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border: thin solid #312E2E;
-    float: right;}
-
-.btn1{
-     margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    
-    float: left;
-}
-
-.btn2{
-     margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-   
-    float: right;
-}
-</style>
+<title>IHC Remote Pedagogy</title>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
 <div>
-      			<h1 style="white-space:pre-wrap;">INTEGRATED HUMANITIES CENTER </h1>
-      			<p style="text-align:right;white-space:pre-wrap;" class=""><a href="https://www.suzannedelgizzo.net/integratedhumanities">Integrated Humanities</a>   <a href="https://www.suzannedelgizzo.net/ihc-teaching-learning/">IHC Teaching &amp; Learning</a>   <a href="pedagogy.html">IHC Pedagogy</a>   <a href="https://www.suzannedelgizzo.net/ihc-tools">IHC Tools</a>   <a href="https://www.suzannedelgizzo.net/ihc-conference-room"> IHC Virtual Conference Room</a></p>
-      				</div>
-
-      				<main>
-    <div class="center">
-      <img src="assets/hourglass.jpg" alt="A hourglass." width="400" height="280" class="img_float_right"/>
-
-<h2 style="white-space:pre-wrap;">Timely Feedback &amp; Grade Transparency</h2>
-
-<p class="" style="white-space:pre-wrap;"><strong>Establish expectations <br></strong>Always but especially when you are not meeting students F2F, timely feedback on student work is vital.&nbsp; Let students know <strong>how long you will take to respond to their work</strong> (e.g., for a set of papers, it might be a week or a week and a half; for quizzes, it might be by the next class).  Also let them know <strong>the format you will use to deliver feedback</strong> (screen capture, mark up using editing tools, speed grader in Canvas, etc.)<br>
-</p>
-
-<p class="" style="white-space:pre-wrap;"><strong>Use rubrics</strong><br> Equally important is making sure students understand HOW they are being graded through use of clear, easy to understand rubrics. You can make rubrics that you share with your students as document files; there is a rubric function on Canvas should you wish to use it.<br></p>
-
-<p class="" style="white-space:pre-wrap;"> <strong>Use the grade book and keep it updated<br> </strong>Be sure to post grades regularly, so students can see how they did on a particular assignment and how they are doing in the class overall easily.&nbsp; I’ll be honest: Gradebook on Canvas takes a second to set up, but it is a very useful tool, once you have it up and running!</p>
-<ul data-rte-list="default"><li>
-	<p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=TtvbwgstsMs">Canvas Grade book</a>—overview</p></li>
-	<li><p class="" style="white-space:pre-wrap;"><a href="https://www.loom.com/share/6616ace3c3d14b3aa85d6122bc70e9ae">Assignments and weighting assignments on Canvas Grade book</a><br><br><br></p></li>
-
-</ul>
-
-<form class="btn1" action="subpage4.html">
-    <input type="submit" value="Previous" />
-</form>
-<form class="btn2" action="subpage6.html">
-    <input type="submit" value="Next" />
+  <h1 class="landingtitle">INTEGRATED HUMANITIES CENTER</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
+      <li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
+      <li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
+      <li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a></li>
+    </ul>
+  </nav>
 </div>
+<main>
+  <div class="center"> <img src="../assets/hourglass.jpg" alt="A hourglass." width="400" height="280" class="img_float_right"/>
+    <h2 style="white-space:pre-wrap;">Timely Feedback &amp; Grade Transparency</h2>
+    <p class="" style="white-space:pre-wrap;"><strong>Establish expectations <br>
+      </strong>Always but especially when you are not meeting students F2F, timely feedback on student work is vital.&nbsp; Let students know <strong>how long you will take to respond to their work</strong> (e.g., for a set of papers, it might be a week or a week and a half; for quizzes, it might be by the next class).  Also let them know <strong>the format you will use to deliver feedback</strong> (screen capture, mark up using editing tools, speed grader in Canvas, etc.)<br>
+    </p>
+    <p class="" style="white-space:pre-wrap;"><strong>Use rubrics</strong><br>
+      Equally important is making sure students understand HOW they are being graded through use of clear, easy to understand rubrics. You can make rubrics that you share with your students as document files; there is a rubric function on Canvas should you wish to use it.<br>
+    </p>
+    <p class="" style="white-space:pre-wrap;"> <strong>Use the grade book and keep it updated<br>
+      </strong>Be sure to post grades regularly, so students can see how they did on a particular assignment and how they are doing in the class overall easily.&nbsp; I’ll be honest: Gradebook on Canvas takes a second to set up, but it is a very useful tool, once you have it up and running!</p>
+    <ul data-rte-list="default">
+      <li>
+        <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/watch?v=TtvbwgstsMs">Canvas Grade book</a>—overview</p>
+      </li>
+      <li>
+        <p class="" style="white-space:pre-wrap;"><a href="https://www.loom.com/share/6616ace3c3d14b3aa85d6122bc70e9ae">Assignments and weighting assignments on Canvas Grade book</a><br>
+          <br>
+          <br>
+        </p>
+      </li>
+    </ul>
+  </div>
+  <form class="btn1" action="subpage4.html">
+    <input type="submit" value="Previous" />
+  </form>
+  <form class="btn2" action="subpage6.html">
+    <input type="submit" value="Next" />
+  </form>
 </main>
-
 </body>
 </html>
