--- a/LandingPage-v2-main/index.html
+++ b/LandingPage-v2-main/index.html
@@ -14,7 +14,7 @@
 
   
 <div>
-	<h1 class="landingtitle">INTEGRATED HUMANITIES CENTER</h1>
+	<h1 class="landingtitle"><a href="index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
 	
 	<nav>
     <ul>
