--- a/IHC-TOOLS2-main/ihctools.html
+++ b/IHC-TOOLS2-main/ihctools.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div id="wrapper" style="margin-bottom: 5px; column-gap: normal;">
-  <h1 class="landingtitle">INTEGRATED HUMANITIES CENTER</h1>
+  <h1 class="landingtitle"><a href="../LandingPage-v2-main/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
   <div>
     <nav>
       <ul>
@@ -24,9 +24,8 @@
     </nav>
   </div>
   <main>
-    <div class="center">
+    <div class="center"> <img src="../assets/pedagogy_classroom.jpg" alt="A classroom." width="400" height="250" class="img_float_right"/>
       <h2 style="white-space:pre-wrap;"><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">TEACHING &amp; LEARNING RESOURCES</a> -  TOOLS</h2>
-      <img src="../assets/pedagogy_classroom.jpg" alt="A classroom." width="400" height="250" class="img_float_right"/>
       <p class="" style="white-space:pre-wrap;"><strong>The foundational tools will be:</strong></p>
       <p>
       <ul style="list-style-type: none">
