--- a/IHC-TOOLS2-main/ihctools4.html
+++ b/IHC-TOOLS2-main/ihctools4.html
@@ -12,7 +12,7 @@
 <body>
 
 <div>
-	<h1 class="landingtitle">INTEGRATED HUMANITIES CENTER</h1>
+	<h1 class="landingtitle"><a href="../LandingPage-v2-main/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
