--- a/ihcpedagogy/pedagogy.html
+++ b/ihcpedagogy/pedagogy.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div id="wrapper" style="margin-bottom: 5px; column-gap: normal;">
-  <h1 class="landingtitle">INTEGRATED HUMANITIES CENTER</h1>
+  <h1 class="landingtitle"><a href="../LandingPage-v2-main/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
   <div>
     <nav>
       <ul>
