--- a/ihcpedagogy/subpage9.html
+++ b/ihcpedagogy/subpage9.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div>
-  <h1 class="landingtitle">INTEGRATED HUMANITIES CENTER</h1>
+  <h1 class="landingtitle"><a href="../LandingPage-v2-main/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
   <nav>
     <ul>
       <li><a href="../LandingPage-v2-main/index.html">Home</a></li>
