--- a/IHC-TOOLS2-main/ihctools1.html
+++ b/IHC-TOOLS2-main/ihctools1.html
@@ -13,7 +13,7 @@
       	<h1 class="landingtitle"><a href="../LandingPage-v2-main/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
       	<nav>
       		<ul>
-        		<li><a href="index.html">Home</a></li>
+        		<li><a href="../LandingPage-v2-main/index.html">Home</a></li>
         		<li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
         		<li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
         		<li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
