--- a/ihc-conference-room/IHCVirtualConferenceRoom.html
+++ b/ihc-conference-room/IHCVirtualConferenceRoom.html
@@ -13,6 +13,7 @@
 <div id="wrapper">
   <div>
     <h1 class="landingtitle"><a href="../LandingPage-v2-main/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
+	  
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -26,7 +27,7 @@
   <main>
     <div class="center">
       <h2 style="white-space:pre-wrap;">VIRTUAL CONFERENCE ROOM</h2>
-      <div><img src="../assets/Virtual+Conference+Room+Centered.jpg" alt="Conference Room" width="300" height="226" class="img_float_right"/></div>
+      <div><img src="../assets/Virtual+Conference+Room+Centered.jpg" alt="Conference Room" width="600" height="400"/></div>
       <p class="" style="white-space:pre-wrap;"><strong> This is the CHC Integrated Humanities virtual conference room. It is a curated online space where we can present our trainings &amp; conversations and other shared Center-specific facutly development resources in an attractive, user-friendly format.</strong></p>
 		
 		
@@ -58,13 +59,7 @@
           <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/embed?v=TJ4ujSA75kM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=5">Poll Everywhere for Driving Student Engagement.  Suzanne del Gizzo.  Recorded August 26, 2020</a></p>
         </li>
         <li>
-          <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/embed?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">An Overview of How to Use Kahoot and  Kahoot - how to use with students. Keely McCarthy.  Recorded September 11, 2020.</a></p>
-        </li>
-        <li>
           <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/embed?v=6_kiTqOJgwg&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=6">Low Tech Ways to Engage Students on Zoom.  Suzanne del Gizzo.  Recorded September 15, 2020.</a></p>
-        </li>
-        <li>
-          <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/embed?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Scategories to break the Zoom Fog.  Keely McCarthy.  Recorded on October 7, 2020.</a></p>
         </li>
 		  <br>
         <h3 style="white-space:pre-wrap; text-decoration: underline"><strong class="">Canvas Trainings:</strong></h3>
@@ -82,9 +77,6 @@
         </li>
         <li>
           <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/embed?v=GP5QjHtkAvk&list=PLdBsCJVVY0jxy4AngQ-c7qcodD3NIiBGV&index=9">Canvas Training- Using Studio and Adding Videos on Canvas (with a Video Quiz too).  Recorded on August 19, 2020.</a></p>
-        </li>
-        <li>
-          <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/embed?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Canvas Training:  Big Blue Button Conferencing Tool.  Recorded on August 24, 2020.</a></p>
         </li>
         <li>
           <p class="" style="white-space:pre-wrap;"><a href="https://www.youtube.com/embed?v=dfJ0YLRKfvM&list=PLdBsCJVVY0jw3D57l8iFAcGYtJ4_xjWpg&index=1">Assignments & Grading in Canvas 101. Keely McCarthy.  Recorded on September 14, 2020.</a></p>
