--- a/IHC-TOOLS2-main/ihctools.html
+++ b/IHC-TOOLS2-main/ihctools.html
@@ -15,7 +15,7 @@
   <div>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../LandingPage-v2-main/index.html">Home</a></li>
         <li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
         <li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
         <li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
