--- a/IHC_Landing/index.html
+++ b/IHC_Landing/index.html
@@ -14,19 +14,17 @@
 
   
 <div>
-	<h1 class="landingtitle"><a href="index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
-	
-	<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-		<li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
-		<li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
-		<li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
-		<li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a></li>
-    </ul>
-	</nav>
-	
-</div>
+    <h1 class="landingtitle"><a href="index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
+    <nav>
+      <ul>
+        <li><a href="../IHC_Landing/index.html">Home</a></li>
+        <li><a href="../IHC_Teaching/teaching-learning.html">IHC Teaching and Learning</a></li>
+        <li><a href="../IHC_Pedagogy/pedagogy.html">IHC Pedagogy</a></li>
+        <li><a href="../IHC_Tools/tools.html">IHC Tools</a></li>
+        <li><a href="../IHC_VirtualConference/virtual-conference.html">IHC Virtual Conference Room</a></li>
+      </ul>
+    </nav>
+  </div>
 
 <div class="center" style="margin-top: 10px; margin-bottom: 10px; margin-left: auto; margin-right: auto; font-size: 18pt; text-align: center; display: block;">
 	The Center for Integrated Humanities at Chestnut Hill College is a hub for innovative and collaborative teaching and learning in English, Foreign Language & Literature, History, Media & Communication, Music & Arts, and Religious Studies & Philosophy.
