--- a/IHC_VirtualConference/virtual-conference.html
+++ b/IHC_VirtualConference/virtual-conference.html
@@ -12,15 +12,14 @@
 <body>
 <div id="wrapper">
   <div>
-    <h1 class="landingtitle"><a href="../LandingPage-v2-main/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
-	  
+    <h1 class="landingtitle"><a href="../IHC_Landing/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
-        <li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
-        <li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
-        <li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a></li>
+        <li><a href="../IHC_Landing/index.html">Home</a></li>
+        <li><a href="../IHC_Training/training.html">IHC Teaching and Learning</a></li>
+        <li><a href="../IHC_Pedagogy/pedagogy.html">IHC Pedagogy</a></li>
+        <li><a href="../IHC_Tools/tools.html">IHC Tools</a></li>
+        <li><a href="../IHC_VirtualConference/virtual-conference.html">IHC Virtual Conference Room</a></li>
       </ul>
     </nav>
   </div>
