--- a/IHC_Pedagogy/pedagogy.html
+++ b/IHC_Pedagogy/pedagogy.html
@@ -11,15 +11,15 @@
 </head>
 <body>
 <div id="wrapper" style="margin-bottom: 5px; column-gap: normal;">
-  <h1 class="landingtitle"><a href="../LandingPage-v2-main/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
   <div>
+    <h1 class="landingtitle"><a href="../IHC_Landing/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
     <nav>
       <ul>
-        <li><a href="../LandingPage-v2-main/index.html">Home</a></li>
-        <li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
-        <li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
-        <li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
-        <li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a></li>
+        <li><a href="../IHC_Landing/index.html">Home</a></li>
+        <li><a href="../IHC_Teaching/teaching-learning.html">IHC Teaching and Learning</a></li>
+        <li><a href="../IHC_Pedagogy/pedagogy.html">IHC Pedagogy</a></li>
+        <li><a href="../IHC_Tools/tools.html">IHC Tools</a></li>
+        <li><a href="../IHC_VirtualConference/virtual-conference.html">IHC Virtual Conference Room</a></li>
       </ul>
     </nav>
   </div>
@@ -30,31 +30,31 @@
       <p class="" style="white-space:pre-wrap;"><strong>Topics addressed:</strong></p>
       <ul>
         <li>
-          <h4 class="" style="white-space:pre-wrap;"> <a href="subpage1.html">The Context for Remote Student Learning</a></h4>
+          <h4 class="" style="white-space:pre-wrap;"> <a href="pedagogy1.html">The Context for Remote Student Learning</a></h4>
         </li>
         <li>
-          <h4 class="" style="white-space:pre-wrap;"><a href="subpage2.html">“Connected” Remote Learning</a></h4>
+          <h4 class="" style="white-space:pre-wrap;"><a href="pedagogy2.html">“Connected” Remote Learning</a></h4>
         </li>
         <li>
-          <h4 class="" style="white-space:pre-wrap;"><a href="subpage3.html">General Guidelines &amp; Thoughts about Remote Instruction</a></h4>
+          <h4 class="" style="white-space:pre-wrap;"><a href="pedagogy3.html">General Guidelines &amp; Thoughts about Remote Instruction</a></h4>
         </li>
         <li>
-          <h4 class="" style="white-space:pre-wrap;"><a href="subpage4.html">Communication</a></h4>
+          <h4 class="" style="white-space:pre-wrap;"><a href="pedagogy4.html">Communication</a></h4>
         </li>
         <li>
-          <h4 class="" style="white-space:pre-wrap;"><a href="subpage5.html">Feedback &amp; Assessment</a></h4>
+          <h4 class="" style="white-space:pre-wrap;"><a href="pedagogy5.html">Feedback &amp; Assessment</a></h4>
         </li>
         <li>
-          <h4 class="" style="white-space:pre-wrap;"><a href="subpage6.html">Synchronous and Asynchronous Balancing Act (Emphasis on Student Engagement)</a></h4>
+          <h4 class="" style="white-space:pre-wrap;"><a href="pedagogy6.html">Synchronous and Asynchronous Balancing Act (Emphasis on Student Engagement)</a></h4>
         </li>
         <li>
-          <h4 class="" style="white-space:pre-wrap;"><a href="subpage7.html">Teach Student HOW to Learn Remotely</a></h4>
+          <h4 class="" style="white-space:pre-wrap;"><a href="pedagogy7.html">Teach Student HOW to Learn Remotely</a></h4>
         </li>
         <li>
-          <h4 class="" style="white-space:pre-wrap;"><a href="subpage8.html">Accessibility &amp; Universal Design for Learning</a></h4>
+          <h4 class="" style="white-space:pre-wrap;"><a href="pedagogy8.html">Accessibility &amp; Universal Design for Learning</a></h4>
         </li>
         <li>
-          <h4 class="" style="white-space:pre-wrap;"><a href="subpage9.html">General Best Practices for Course Design “Refresher”</a></h4>
+          <h4 class="" style="white-space:pre-wrap;"><a href="pedagogy9.html">General Best Practices for Course Design “Refresher”</a></h4>
         </li>
       </ul>
       <p class="" style="white-space:pre-wrap;"><strong>Training &amp; Conversation video bank:</strong></p>
