--- a/IHC_Pedagogy/pedagogy1.html
+++ b/IHC_Pedagogy/pedagogy1.html
@@ -11,17 +11,17 @@
 </head>
 <body>
 <div>
-  <h1 class="landingtitle"><a href="../LandingPage-v2-main/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
-  <nav>
-    <ul>
-      <li><a href="../LandingPage-v2-main/index.html">Home</a></li>
-      <li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
-      <li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
-      <li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
-      <li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a></li>
-    </ul>
-  </nav>
-</div>
+    <h1 class="landingtitle"><a href="../IHC_Landing/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
+    <nav>
+      <ul>
+        <li><a href="../IHC_Landing/index.html">Home</a></li>
+        <li><a href="../IHC_Teaching/teaching-learning.html">IHC Teaching and Learning</a></li>
+        <li><a href="../IHC_Pedagogy/pedagogy.html">IHC Pedagogy</a></li>
+        <li><a href="../IHC_Tools/tools.html">IHC Tools</a></li>
+        <li><a href="../IHC_VirtualConference/virtual-conference.html">IHC Virtual Conference Room</a></li>
+      </ul>
+    </nav>
+  </div>
 <main>
   <div class="center"> <img src="../assets/home_office.jpg" alt="Home office." width="400" height="280" class="img_float_right"/>
     <h2 style="white-space:pre-wrap;">THE CONTEXT FOR REMOTE STUDENT LEARNING</h2>
@@ -35,7 +35,7 @@
 	<form class="btn1" action="pedagogy.html">
       <input type="submit" value="Previous" />
     </form>
-    <form class="btn2" action="subpage2.html">
+    <form class="btn2" action="pedagogy2.html">
       <input type="submit" value="Next" />
     </form>
 </main>
