--- a/IHC_Pedagogy/pedagogy7.html
+++ b/IHC_Pedagogy/pedagogy7.html
@@ -11,17 +11,17 @@
 </head>
 <body>
 <div>
-  <h1 class="landingtitle"><a href="../LandingPage-v2-main/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
-  <nav>
-    <ul>
-      <li><a href="../LandingPage-v2-main/index.html">Home</a></li>
-      <li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
-      <li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
-      <li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
-      <li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a></li>
-    </ul>
-  </nav>
-</div>
+    <h1 class="landingtitle"><a href="../IHC_Landing/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
+    <nav>
+      <ul>
+        <li><a href="../IHC_Landing/index.html">Home</a></li>
+        <li><a href="../IHC_Teaching/teaching-learning.html">IHC Teaching and Learning</a></li>
+        <li><a href="../IHC_Pedagogy/pedagogy.html">IHC Pedagogy</a></li>
+        <li><a href="../IHC_Tools/tools.html">IHC Tools</a></li>
+        <li><a href="../IHC_VirtualConference/virtual-conference.html">IHC Virtual Conference Room</a></li>
+      </ul>
+    </nav>
+  </div>
 <main>
   <div class="center"> <img src="../assets/transparency.jpg" alt="A glass ceiling." width="400" height="280" class="img_float_right"/>
     <h2 style="white-space:pre-wrap;">Teach Students How to Learn Online<strong> </strong></h2>
@@ -45,10 +45,10 @@
     </ul>
     <p class="" style="white-space:pre-wrap;"><strong>&nbsp;</strong></p>
   </div>
-  <form class="btn1" action="subpage6.html">
+  <form class="btn1" action="pedagogy6.html">
     <input type="submit" value="Previous" />
   </form>
-  <form class="btn2" action="subpage8.html">
+  <form class="btn2" action="pedagogy8.html">
     <input type="submit" value="Next" />
   </form>
 </main>
