--- a/IHC_Tools/tools2.html
+++ b/IHC_Tools/tools2.html
@@ -12,18 +12,17 @@
 <body>
 
 	<div>
-      	<h1 class="landingtitle"><a href="../LandingPage-v2-main/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
-      	<nav>
-      		<ul>
-        		<li><a href="../LandingPage-v2-main/index.html">Home</a></li>
-        		<li><a href="../Training-page-main/IHC Teaching & Learning — Suzanne del Gizzo.html">IHC Teaching and Learning</a></li>
-        		<li><a href="../ihcpedagogy/pedagogy.html">IHC Pedagogy</a></li>
-        		<li><a href="../IHC-TOOLS2-main/ihctools.html">IHC Tools</a></li>
-        		<li><a href="../ihc-conference-room/IHCVirtualConferenceRoom.html">IHC Virtual Conference Room</a>
-				</li>
-      		</ul>
-    	</nav>
-    </div>
+    <h1 class="landingtitle"><a href="../IHC_Landing/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
+    <nav>
+      <ul>
+        <li><a href="../IHC_Landing/index.html">Home</a></li>
+        <li><a href="../IHC_Teaching/teaching-learning.html">IHC Teaching and Learning</a></li>
+        <li><a href="../IHC_Pedagogy/pedagogy.html">IHC Pedagogy</a></li>
+        <li><a href="../IHC_Tools/tools.html">IHC Tools</a></li>
+        <li><a href="../IHC_VirtualConference/virtual-conference.html">IHC Virtual Conference Room</a></li>
+      </ul>
+    </nav>
+  </div>
 
    <main>
 
@@ -49,10 +48,10 @@
     		</p>
 		</div>
 	</div>
-    <form class="btn1" action="ihctools1.html">
+    <form class="btn1" action="tools1.html">
     <input type="submit" value="Previous" />
 	</form>
-	<form class="btn2" action="ihctools3.html">
+	<form class="btn2" action="tools3.html">
     <input type="submit" value="Next" /> </form>
 </main>
 </body>
