--- a/IHC_Teaching/Teaching And Learning.html
+++ b/IHC_Teaching/Teaching And Learning.html
@@ -34,8 +34,8 @@
 		<img src="../assets/Virtual+Conference+Room+Centered.jpg" alt="Conference Room">
 	  </div>
     <h1 style="text-align:center;white-space:pre-wrap;">Some new favorite sites</h1>
-    <p class="" style="white-space:pre-wrap;">Looking for a good icebreaker?<strong> Try</strong><a><strong> this automatically generated list of (bizarre) questions for some fun</strong></a><strong>!</strong>
-    <p class="" style="white-space:pre-wrap;">Carnegie Mellon University’s Global Communication Center’s<strong> </strong> <a href="https://www.youtube.com/embed?feature=youtu.be&amp;v=y5ShTBRw8xY"><strong>Overcoming Unconscious Bias on Your Team</strong></a></p>
+    <p class="" style="white-space:pre-wrap;">Looking for a good icebreaker?<strong> Try</strong><a href="https://perchance.org/gettingtoknowyou"><strong> this automatically generated list of (bizarre) questions for some fun</strong></a><strong>!</strong>
+    <p class="" style="white-space:pre-wrap;">Carnegie Mellon University’s Global Communication Center’s<strong> </strong> <a href="https://www.youtube.com/embed?v=y5ShTBRw8xY"><strong>Overcoming Unconscious Bias on Your Team</strong></a></p>
     <p class="" style="white-space:pre-wrap;">Worried you are giving students too much work when designing asynchronous activities?  Try the <a href="https://cte.rice.edu/workload"><strong>Coursework Calculator</strong></a>from Rice University.</p>
     <p class="" style="white-space:pre-wrap;">Wondering how you might construct a “narrative” of your course for students?  Check out:<a href="https://innovation-studio.org/"><strong>Leading with Story</strong></a>From Innovation Studio.</p>
     <p style="white-space:pre-wrap;">Be inspired and hear what others are doing as they prepare for Fall on the <a href="https://teachinginhighered.com/episodes/"><strong>Teaching in Higher Ed podcast</strong></a>.</p>
