--- a/IHC_Pedagogy/pedagogy6.html
+++ b/IHC_Pedagogy/pedagogy6.html
@@ -58,10 +58,10 @@
         <p class="" style="white-space:pre-wrap;">Ask students to use webcams, always, but especially if they are talking or presenting.  Try to set the expectation for webcam use BEFORE the first online synchronous class.  If students are reluctant because they don’t want others to see their home or where they student, feel free to share:</p>
         <ul data-rte-list="default">
           <li>
-            <p class="" style="white-space:pre-wrap;"><a href="https://www.loom.com/share/1b2ba0bf81be4972bc77efad6d7c794e">How to Change Your Background on Teams</a></p>
+            <p class="" style="white-space:pre-wrap;"><a href="https://www.loom.com/embed/1b2ba0bf81be4972bc77efad6d7c794e">How to Change Your Background on Teams</a></p>
           </li>
           <li>
-            <p class="" style="white-space:pre-wrap;"><a href="https://www.loom.com/share/7aba6dec75174a7285527ea61c983dda">How to Change Your Background on Zoom</a></p>
+            <p class="" style="white-space:pre-wrap;"><a href="https://www.loom.com/embed/7aba6dec75174a7285527ea61c983dda">How to Change Your Background on Zoom</a></p>
           </li>
         </ul>
       </li>
@@ -88,7 +88,7 @@
     </ul>
     <p class="" style="white-space:pre-wrap;"> </p>
     <h3 style="white-space:pre-wrap;">Asynchronous Strategies &amp; Ideas&nbsp; </h3>
-    <p class="" style="white-space:pre-wrap;"><strong>[</strong><a href="https://www.youtube.com/watch?v=LYpJHJPomqg&list=PLdBsCJVVY0jypnfU4VqfCsBGwCOt7xdW9&index=2"><strong>IHC Conversation on Designing Meaningful Asynchronous Activities</strong></a><strong>—accessible to CHC community members only]</strong></p>
+    <p class="" style="white-space:pre-wrap;"><strong>[</strong><a href="https://www.youtube.com/embed?v=LYpJHJPomqg&list=PLdBsCJVVY0jypnfU4VqfCsBGwCOt7xdW9&index=2"><strong>IHC Conversation on Designing Meaningful Asynchronous Activities</strong></a><strong>—accessible to CHC community members only]</strong></p>
     <p class="" style="white-space:pre-wrap;">Asynchronous activities provide an opportunity for students to take responsibility for their learning and/or build relationships with each other by engaging in some activity that produces a deliverable when the class does not meet synchronously.  The most common asynchronous activities are: email, discussion boards, blogs, wikis, podcasts, videos, and e-portfolios.</p>
     <p class="" style="white-space:pre-wrap;"> Please keep in mind that these “deliverables” should be commensurate to work you would expect students to produce during a class period.&nbsp; A danger when moving to remote instruction is demanding much more work of students than you would in a traditional F2F environment. &nbsp;Make sure you are not giving “busy” work because you are not seeing the students in the same way.&nbsp; Every time you assign something, explain to yourself and to the students how the assignment or the activity helps the students reach one of the course objectives. If you are concerned that you may be giving students too much work, try this <a href="https://cte.rice.edu/workload"><strong>Coursework Calculator</strong></a><strong> </strong>from Rice University.</p>
     <ul data-rte-list="default">
