--- a/IHC_Teaching/teaching-learning.html
+++ b/IHC_Teaching/teaching-learning.html
@@ -34,16 +34,16 @@
 		<img src="../assets/Virtual+Conference+Room+Centered.jpg" alt="Conference Room">
 	  </div>
     <h1 style="text-align:center;white-space:pre-wrap;">Some new favorite sites</h1>
-    <p class="" style="white-space:pre-wrap;">Looking for a good icebreaker?<strong> Try</strong><a href="https://perchance.org/gettingtoknowyou"><strong> this automatically generated list of (bizarre) questions for some fun</strong></a><strong>!</strong>
-    <p class="" style="white-space:pre-wrap;">Carnegie Mellon University’s Global Communication Center’s<strong> </strong> <a href="https://www.youtube.com/embed?v=y5ShTBRw8xY"><strong>Overcoming Unconscious Bias on Your Team</strong></a></p>
-    <p class="" style="white-space:pre-wrap;">Worried you are giving students too much work when designing asynchronous activities?  Try the <a href="https://cte.rice.edu/workload"><strong>Coursework Calculator</strong></a>from Rice University.</p>
-    <p class="" style="white-space:pre-wrap;">Wondering how you might construct a “narrative” of your course for students?  Check out:<a href="https://innovation-studio.org/"><strong>Leading with Story</strong></a>From Innovation Studio.</p>
-    <p style="white-space:pre-wrap;">Be inspired and hear what others are doing as they prepare for Fall on the <a href="https://teachinginhighered.com/episodes/"><strong>Teaching in Higher Ed podcast</strong></a>.</p>
-    <p>A great overview of the issues and choices around preparing for Fall in: <a href="https://www.chronicle.com/article/how-im-spending-my-pandemic-summer-vacation?cid=gen_sign_in&amp;cid2=gen_login_refresh"><strong>How I’m Spending My Pandemic Summer Vacation</strong></a></p>
+    <p class="" style="white-space:pre-wrap;">Looking for a good icebreaker?<strong> Try</strong><a href="https://perchance.org/gettingtoknowyou" target="_blank"><strong> this automatically generated list of (bizarre) questions for some fun</strong></a><strong>!</strong>
+	<p class="" style="white-space: pre-wrap;">Carnegie Mellon University's Global Communication Center's <a href="https://www.youtube.com/watch?v=y5ShTBRw8xY" target="_blank"><strong>Overcoming Unconcious Bias on Your Team</strong></a></p>
+    <p class="" style="white-space:pre-wrap;">Worried you are giving students too much work when designing asynchronous activities?  Try the <a href="https://cte.rice.edu/workload" target="_blank"><strong>Coursework Calculator</strong></a>from Rice University.</p>
+    <p class="" style="white-space:pre-wrap;">Wondering how you might construct a “narrative” of your course for students?  Check out:<a href="https://innovation-studio.org/" target="_blank"><strong>Leading with Story</strong></a>From Innovation Studio.</p>
+    <p style="white-space:pre-wrap;">Be inspired and hear what others are doing as they prepare for Fall on the <a href="https://teachinginhighered.com/episodes/" target="_blank"><strong>Teaching in Higher Ed podcast</strong></a>.</p>
+    <p>A great overview of the issues and choices around preparing for Fall in: <a href="https://www.chronicle.com/article/how-im-spending-my-pandemic-summer-vacation?cid=gen_sign_in&amp;cid2=gen_login_refresh" target="_blank"><strong>How I’m Spending My Pandemic Summer Vacation</strong></a></p>
     <p>Driving student engagement is essential to successful teaching and learning.</p>
-    <a href="https://www.chronicle.com/article/how-to-make-your-teaching-more-engaging/"> <strong>How to Make Your Teaching More Engaging</strong></a>
+    <a href="https://www.chronicle.com/article/how-to-make-your-teaching-more-engaging/" target="_blank"> <strong>How to Make Your Teaching More Engaging</strong></a>
     </p>
-    <p><strong>CHC Faculty:</strong>Check out the Remote Teaching Resources section under the Faculty Tab on: <a href="https://my.chc.edu/">my.chc.edu</a></p>
+    <p><strong>CHC Faculty:</strong>Check out the Remote Teaching Resources section under the Faculty Tab on: <a href="https://my.chc.edu/" target="_blank">my.chc.edu</a></p>
   </div>
 </div>
 </body>
