--- a/IHC_Tools/tools2.html
+++ b/IHC_Tools/tools2.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
  <meta charset="utf-8" />
@@ -27,7 +27,7 @@
    <main>
 
 	<div class="center">
-		<img src="../assets/pedagogy_classroom.jpg" alt="image not found" width="400" height="280" class="img_float_right">
+		<img src="../assets/pedagogy_classroom.jpg" alt="image not found" class="img_float_right toolImage">
 		<div style="text-align: left">
 			
 			<h2 style="white-space:pre-wrap;">VIDEO CONFERENCING PLATFORMS</h2>
