--- a/IHC_VirtualConference/virtual-conference.html
+++ b/IHC_VirtualConference/virtual-conference.html
@@ -26,7 +26,7 @@
   <main>
     <div class="center">
       <h2 style="white-space:pre-wrap;">VIRTUAL CONFERENCE ROOM</h2>
-      <div><img src="../assets/Virtual+Conference+Room+Centered.jpg" alt="Conference Room" width="600" height="400"/></div>
+      <div><img src="../assets/Virtual+Conference+Room+Centered.jpg" alt="Conference Room" class="cinferenceImage"/></div>
       <p class="" style="white-space:pre-wrap;"><strong> This is the CHC Integrated Humanities virtual conference room. It is a curated online space where we can present our trainings &amp; conversations and other shared Center-specific facutly development resources in an attractive, user-friendly format.</strong></p>
 		
 		
